--- a/Jelly.vcxproj
+++ b/Jelly.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="src\graphics\scenes\awesome_cube_field.h" />
     <ClInclude Include="src\graphics\scenes\awesome_rectangle.h" />
     <ClInclude Include="src\graphics\scenes\let_there_be_light.h" />
+    <ClInclude Include="src\graphics\scenes\lit_container_party.h" />
     <ClInclude Include="src\graphics\scenes\textured_rectangle.h" />
     <ClInclude Include="src\graphics\scenes\xz_grid.h" />
     <ClInclude Include="src\imfilebrowser.h" />
@@ -210,6 +211,10 @@
     <None Include="shaders\let_there_be_light\frag_objects.glsl" />
     <None Include="shaders\let_there_be_light\frag_light.glsl" />
     <None Include="shaders\let_there_be_light\vertex_objects.glsl" />
+    <None Include="shaders\lit_container_party\frag_light.glsl" />
+    <None Include="shaders\lit_container_party\frag_objects.glsl" />
+    <None Include="shaders\lit_container_party\vertex_light.glsl" />
+    <None Include="shaders\lit_container_party\vertex_objects.glsl" />
     <None Include="shaders\textured_rectangle\frag_tex_rect.glsl" />
     <None Include="shaders\textured_rectangle\vertex_tex_rect.glsl" />
     <None Include="shaders\vertex.glsl" />
