--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1490,0
+Pos=2080,3
 Size=811,1248
 Collapsed=1
 
@@ -61,5 +61,13 @@ Size=200,100
 
 [Window][Settings Menu]
 Pos=2,0
-Size=840,1678
+Size=712,835
+
+[Window][Lit Container Party Settings]
+Pos=2377,43
+Size=504,589
+
+[Window][Let There Be Light Settings]
+Pos=2380,636
+Size=501,600
 
