--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1490,8
+Pos=1490,7
 Size=811,1248
 Collapsed=1
 
@@ -61,13 +61,17 @@ Size=200,100
 
 [Window][Settings Menu]
 Pos=0,0
-Size=722,926
+Size=608,1270
 
 [Window][Lit Container Party Settings]
 Pos=1793,50
-Size=505,634
+Size=505,748
 
 [Window][Let There Be Light Settings]
 Pos=2271,636
 Size=501,600
+
+[Window][Global world settings]
+Pos=1690,45
+Size=609,975
 
